# ACPLazyBridge

./: .browser-echo-mcp.json  .gitignore  .markdownlint-cli2.yaml  .markdownlint-strict.json  .markdownlint.json  .markdownlintignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md  ROADMAP.md  WARP.md  coderabbit.yaml  sgconfig.yml  sync_docs_to_worktrees.sh  test_output.jsonl
.claude/: CLAUDE.md  README.md  commands  settings.local.json
.claude/agents/: code-analyzer.md  code-retriever.md  document-retriever.md  sdd-doc-validator.md
.claude/hooks/: inject-datetime.sh  post-sdd-check.sh  sdd-task-fetch.sh  validate-sdd-compliance.sh
.codeql/: config.yml
.github/: CLAUDE.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  engineering_task.yml  feature_request.yml
.github/workflows/: ci.yml  ci.yml.backup  codeql.yml  docs-style.yml
.serena/: project.yml
.serena/memories/: SDD_rules.md  architecture_structure.md  code_style_conventions.md  development_workflow.md  documentation_structure.md  project_overview.md  reference_documentation.md  suggested_commands.md  task_completion_checklist.md
.specify/: AGENTS.md  CLAUDE.md  README.md  spec-driven.md
.specify/commands/: plan.md  sdd-task.md  specify.md  tasks.md
.specify/commands-template/: plan.md  specify.md  tasks.md
.specify/memory/: AI-Engineer-SDD-Workflow-Baseline-templates.txt  constitution.md  constitution_update_checklist.md  lifecycle.md
.specify/memory-template/: constitution.md  constitution_update_checklist.md
.specify/templates/: agent-file-template.md  plan-template.md  spec-template.md  tasks-template.md
.worktrees/: codex-proto-1  codex-stdio-1  docs-workflow-ci
_artifacts/: README.md
_artifacts/jq/: README.md
crates/: AGENTS.md  CLAUDE.md
crates/acp-lazy-core/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/acp-lazy-core/src/: lib.rs  permissions.rs  protocol.rs  transport.rs
crates/acp-lazy-core/src/runtime/: adapter.rs  mod.rs  server.rs  session.rs
crates/acp-lazy-core/tests/: runtime_test.rs
crates/codex-cli-acp/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/codex-cli-acp/_artifacts/039-streaming-alignment/tests/: T033c_output_20250927_021903.jsonl  T033c_output_20250927_022000.jsonl  T033c_output_20250927_023841.jsonl  T033c_output_20250927_035237.jsonl
crates/codex-cli-acp/examples/: minimal_acp_echo.rs
crates/codex-cli-acp/src/: codex_agent.rs  codex_proto.rs  lib.rs  main.rs  notify_source.rs  tool_calls.rs  validation.rs
crates/codex-cli-acp/tests/: acp_integration_test.rs  codex_cli_smoke_test.rs  jsonl_regression_test.rs  notify_test.rs  playback.rs  session_update_format.rs  streaming_snapshots_test.rs  tool_call_lifecycle_test.rs  tool_calls_test.rs
crates/codex-cli-acp/tests/support/: mod.rs
dev-docs/: CLAUDE.md  README.md
memory/: constitution.md  constitution_update_checklist.md
queries/: CLAUDE.md
scripts/: CLAUDE.md  README.md  codex-docker-wrapper.sh  run-t033-interactive.sh  run-t033-smoke.sh
sdd-rules/: AGENTS.md  CLAUDE.md  lifecycle.md  plan-template.md  spec-driven.md  spec-template.md  tasks-template.md
specs/: AGENTS.md  CLAUDE.md
(+382 files in other folders)
