[package]
name = "acp-lazy-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
futures = "0.3"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
which = "6"

[dev-dependencies]
tokio-test = "0.4"

