[package]
name = "codex-cli-acp"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
acp-lazy-core = { path = "../acp-lazy-core" }

